# SeaLion

./: .gitignore  AABullet.cpp  AABullet.h  AbstractAirplaneFactory.h  AbstractBonusFactory.h  AbstractShipFactory.h  AircraftCarrier.cpp  AircraftCarrier.h  AircraftCarrierSpecialty.h  AirplaneFactory.cpp  AirplaneFactory.h  AntiAircraft.cpp  AntiAircraft.h  Arsenal.cpp  Arsenal.h  ArsenalFactory.h  BarInterface.cpp  BarInterface.h  Battleship.cpp  Battleship.h  Bomber.cpp  Bomber.h  Bonus.cpp  Bonus.h  BonusFactory.cpp  BonusFactory.h  Bullet.cpp  Bullet.h  BulletFactory.cpp  BulletFactory.h  Button.cpp  Button.h  CMakeLists.txt  CannonFactory.cpp  CannonFactory.h  Collision.cpp  Collision.h  ConcreteAircraftCarrier.cpp  ConcreteAircraftCarrier.h  ConcreteArsenal.cpp  (+97 more)
Clone/: OldAircraftCarrier.cpp  OldAircraftCarrier.h  OldAntiAircraft.cpp  OldAntiAircraft.h  OldArsenal.cpp  OldArsenal.h  OldBattleship.cpp  OldBattleship.h  OldBomber.cpp  OldBomber.h  OldCruiser.cpp  OldCruiser.h  OldCurrentDir.cpp  OldCurrentDir.h  OldDestroyer.cpp  OldDestroyer.h  OldFigther.cpp  OldFigther.h  OldHeavlyCannon.cpp  OldHeavlyCannon.h  OldLightCannon.cpp  OldLightCannon.h  OldMedium.cpp  OldMedium.h  OldSubmarine.cpp  OldSubmarine.h  OldTorpedo.cpp  OldTorpedo.h  OldTorpedoTube.cpp  OldTorpedoTube.h  OldVehicle.cpp  OldVehicle.h  OldWarShip.cpp  OldWarShip.h
Res/Animations/: Airplanes.mkv  Combat.mkv  Fog.mkv  IsleCollision.mkv  ShipCollision.mkv  Wirpool.mkv
UnitTesting/: AircraftCarrierFixture.cpp  AircraftCarrierTest.cpp  BattleshipFixture.cpp  BattleshipTest.cpp  BomberFixture.cpp  BomberTest.cpp  CMakeLists.txt  CollisionFixture.cpp  CollisionFixture.h  CruiserFixture.cpp  CruiserTest.cpp  DestroyerFixture.cpp  DestroyerTest.cpp  FighterFixture.cpp  FighterTest.cpp  GameTileFixture.cpp  GameTileTest.cpp  GameWorldFixture.cpp  GameWorldTest.cpp  HeavlyCannonFixture.cpp  HeavlyCannonTest.cpp  LightCannonFixture.cpp  LightCannonTests.cpp  MediumCannonFixture.cpp  MediumCannonTests.cpp  MvcControllerFixture.cpp  MvcControllerTest.cpp  MvcViewFixture.cpp  MvcViewTest.cpp  SubmarineFixture.cpp  SubmarineTest.cpp  TorpedoBomberFixture.cpp  TorpedoBomberTest.cpp  runAllTests.cpp
