set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
cmake_minimum_required(VERSION 3.5)
add_subdirectory(./lib/googletest)
set(gtest_SOURCE_DIR, ./lib/googletest/)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
set(TEST_SOURCE_FILES runAllTests.cpp GameWorldFixture.cpp GameTileTest.cpp GameWorldTest.cpp GameTileFixture.cpp)
add_executable(runSeaLionTests ${TEST_SOURCE_FILES})
target_link_libraries(runSeaLionTests gtest gtest_main sfml-graphics sfml-window sfml-system core)
